# tales-of-second-city

./: .gitignore  README.md  pyproject.toml
census_scrape/: census_scrape.ipynb  census_scrape.py  variable_names.txt
data/Boundaries - Neighborhoods/: geo_export_0aaf8735-0788-4e6e-aedc-f0c29e48fae9.dbf
data/Parks - Chicago Park District Facilities (current)/: geo_export_b415f5d6-75c2-47c2-8fff-9e291c476324.dbf
data/Parks - Chicago Park District Park Boundaries (current)/: geo_export_efe62abf-a98b-4ad7-b67d-4b76e27dec5c.dbf
talesofsecondcity/: __main__.py  app.py  app.py.orig
talesofsecondcity/analysis/: index.py
talesofsecondcity/cleaning/: generate_databases.py  generate_db  generate_db.py  geocode_libraries.py  geojson_to_census_tract  point_to_census_tract
talesofsecondcity/cleaning/census_api/: census_scrape.py  geopanda_merge.py  variable_defs.py
talesofsecondcity/cleaning/geocode_api/: address_to_census_tract.py  census_geocode_api.py  clean_data_geocode.py  clean_geocoded_data.py  geojson_to_census_tract  point_to_census_tract  point_to_census_tract.py  preprocess_data.py  preprocess_data_geocode.py
talesofsecondcity/data/: full_demo_data.csv  full_ps_data.csv  index_data.csv  indexed_data.csv
talesofsecondcity/data/census_scrape/: census_scrape.ipynb  census_scrape.py  variable_defs.py
talesofsecondcity/data/geocoded/: bus_geocoded.csv  divvy_geocoded.csv  l_stops_geocoded.csv  libraries_final.csv  libraries_geocoded.csv  parks_final.csv  parks_geocoded.csv
talesofsecondcity/visualization/: footprint.html  layer_map.py  map.py  maps.py
(+34 files in other folders)
