[tool.poetry]
name = "talesofsecondcity"
version = "0.1.0"
description = ""
authors = ["Your Name <you@example.com>"]
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.8"
dash = "^2.15.0"
dash-bootstrap-components = "^1.5.0"
pandas = "^2.0"
geopy = "^2.4.1"
pygris = "^0.1.6"
matplotlip = "^0.2"
folium = "^0.16.0"


[tool.poetry.group.dev.dependencies]
ipykernel = "^6.29.3"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"


